--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
     var responses6 = { 'agree': answers4, 'disagree': answers4, '*v agree': answers4, '*v disagree': answers4, 'undecided': answers4 }
 
     function answers1() {
-      speak("Great. I have a few questions for you. shall I continue ?");
+      speak("Great. I have a few questions for you. Would you like to continue ?");
       annyang.removeCommands(['Yes', 'Yeah', 'No', 'Nope', '*v yes', '*v No', '*v yeah', 'yes *v', 'yeah *v','sure']);
       annyang.addCommands(responses2);
     };
