--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
     }
 
     function answers4() {
-      speak("Thank you for your responses ! That is all for now");
+      speak("Thank you for your responses ! That is all for now. Goodbye!");
       annyang.removeCommands(['agree', 'disagree', '*v agree', '*v disagree', 'undecided']);
       stop();
     }
