--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
     }
 
     function answers4y() {
-      speak("Great ! I agree with you. Tell me your email adress for a free coffee at starbucks.");
+      speak("Great ! I agree with you. Tell me your e-mail address for a free coffee at starbucks.");
       annyang.removeCommands(['agree', 'disagree', '*v agree', '*v disagree', 'undecided']);
       annyang.addCommands(responses7);
     }
