--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
     }
 
     function answers4a() {
-      speak("Thanks! Enjoy that free coffee");
+      speak("Thanks again for taking this survey. I hope you enjoy your free coffee");
       annyang.removeCommands('*c');
       stop();
     }
